--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,9 @@
             "drupal/core": {
                 "Date field all languages title fix": "https://www.drupal.org/files/issues/2652850-17.patch",
                 "Fix CKEditor translation": "web/patches/ckeditor-translation.patch"
+            },
+            "symfony/serializer": {
+                "Optimize getNormalizer()": "web/patches/symfony-serializer-3.4.20-getNormalizer-cache.patch"
             }
         }
     },
