--- a/web/sites/live-dealer/config/sync/webcomposer_settings.form_fields_filter_settings.yml
+++ b/web/sites/live-dealer/config/sync/webcomposer_settings.form_fields_filter_settings.yml
@@ -1,4 +1,4 @@
-advanced__active_tab: edit-geoip-language-popup
+advanced__active_tab: edit-affiliate-configuration
 affiliate_expiration: 0
 default_message: 1
 base_url: 1
@@ -427,11 +427,406 @@ geoip_list: 1
 en_popup_content: 1
 pl_popup_content: 1
 in_popup_content: 1
-lottoland_currency: 0
-lottoland_language_mapping: 0
-lottoland_country: 0
-lottoland_javascript_assets: 0
-maintenance_title_live-dealer: 0
-maintenance_content_live-dealer: 0
-maintenance_publish_date_live-dealer: 0
-maintenance_unpublish_date_live-dealer: 0
+lottoland_currency: 1
+lottoland_language_mapping: 1
+lottoland_country: 1
+lottoland_javascript_assets: 1
+maintenance_title_live-dealer: 1
+maintenance_content_live-dealer: 1
+maintenance_publish_date_live-dealer: 1
+maintenance_unpublish_date_live-dealer: 1
+affiliate_configuration__affiliate_expiration: 0
+announcements_configuration__title: 1
+announcements_configuration__default_message: 1
+announcements_configuration__see_all: 0
+announcements_configuration__dismiss_all: 0
+avaya_configuration__base_url: 1
+avaya_configuration__url_post: 1
+avaya_configuration__url_post_timout: 1
+avaya_configuration__jwt_key: 1
+avaya_configuration__validity_time: 1
+avaya_configuration__xdomain_proxy: 1
+browser_configuration__message: 0
+cdn_configuration__enable_cdn: 1
+cdn_configuration__cdn_domain_configuration: 1
+curacao__script_path: 0
+curacao__markup: 0
+footer_configuration__about_dafabet_title: 0
+footer_configuration__about_dafabet_content: 0
+footer_configuration__partners_image_url: 0
+footer_configuration__partners_logo: 0
+footer_configuration__quicklinks_title: 0
+footer_configuration__social_media_title: 0
+footer_configuration__back_to_top_title: 0
+footer_configuration__sponsor_mobile_desc: 0
+footer_configuration__country_codes: 0
+footer_configuration__cookie_notification: 0
+games_fim_provider__playtech_fim_endpoint: 0
+games_gpi_provider__gpi_keno_currency: 1
+games_gpi_provider__gpi_keno_language_mapping: 1
+games_gpi_provider__gpi_pk10_currency: 1
+games_gpi_provider__gpi_pk10_language_mapping: 1
+games_gpi_provider__gpi_thai_lottey_currency: 1
+games_gpi_provider__gpi_thai_lottey_language_mapping: 1
+games_gpi_provider__gpi_live_dealer_currency: 1
+games_gpi_provider__gpi_live_dealer_language_mapping: 1
+games_gpi_provider__gpi_game_url: 1
+games_gpi_provider__gpi_lottery_keno_version_no: 1
+games_gpi_provider__gpi_vendor_id: 1
+games_gpi_provider__gpi_ladder_currency: 1
+games_gpi_provider__gpi_ladder_language_mapping: 1
+games_gpi_provider__gpi_keno_extra_params: 1
+games_gpi_provider__gpi_pk10_extra_params: 1
+games_gpi_provider__gpi_thai_lottey_extra_params: 1
+games_gpi_provider__gpi_live_dealer_extra_params: 1
+games_gpi_provider__gpi_ladder_extra_params: 1
+games_opus_provider__opus_game_loader_content: 1
+games_opus_provider__opus_game_url: 1
+games_opus_provider__opus_game_free_play_url: 1
+games_opus_provider__opus_alternative_game_url: 1
+games_opus_provider__languages: 1
+games_opus_provider__currency: 1
+games_opus_provider__opus_unsupported_currencies_title: 1
+games_opus_provider__opus_unsupported_currencies_message: 1
+games_opus_provider__opus_unsupported_currencies_button: 1
+games_opus_provider__opus_fallback_error: 1
+games_opus_provider__country: 1
+games_playtech_provider__javascript_assets: 1
+games_playtech_provider__playtech_pas_endpoint: 1
+games_playtech_provider__lobby_url: 1
+games_playtech_provider__playtech_pas_casino: 1
+games_playtech_provider__languages: 1
+games_playtech_provider__iapiconf_override: 1
+games_playtech_provider__futurama_switch: 1
+games_playtech_provider__error_mapping: 1
+games_playtech_provider__error_header_title_text: 1
+games_playtech_provider__error_button: 1
+games_playtech_provider__futurama_gold_switch: 1
+geoip_language_popup__geoip_list: 1
+geoip_language_popup__en_popup_content: 1
+geoip_language_popup__pl_popup_content: 1
+geoip_language_popup__in_popup_content: 1
+header_configuration__join_now_text: 0
+header_configuration__join_now_link: 0
+header_configuration__login_issue_text: 0
+header_configuration__login_issue_link: 0
+header_configuration__sc_lang_text: 0
+header_configuration__ch_lang_text: 0
+header_configuration__balance_error_text: 0
+header_configuration__profile_icon_hover_text: 0
+header_configuration__cashier_icon_hover_text: 0
+header_configuration__product_menu_new_tag: 0
+header_configuration__welcome_text: 0
+header_configuration__profile_link: 0
+header_configuration__profile_logout_text: 0
+header_configuration__lobby_page_title: 1
+header_configuration__critical_announcement: 0
+header_configuration__critical_announcement_content: 0
+header_configuration__news_announcement: 0
+header_configuration__news_announcement_content: 0
+header_configuration__balance_label_mapping: 0
+header_configuration__balance_error_text_product: 0
+header_configuration__logo_title: 1
+header_configuration__password_mask_toggle: 0
+header_configuration__caps_lock_toggle: 0
+header_configuration__capslock_notification: 0
+header_configuration__cashier_link: 0
+header_configuration__balance_toggle: 0
+header_configuration__product_balance_label: 0
+header_configuration__total_balance_label: 0
+header_configuration__product_balance_id: 0
+header_configuration__currency_balance_mapping: 0
+header_configuration__excluded_balance_mapping: 0
+header_configuration__balance_label_override: 0
+header_configuration__balance_mapping: 1
+header_configuration__registration_link: 0
+header_configuration__default_cashier_link: 1
+header_configuration__cashier_mapping: 1
+header_configuration__default_mcashier_link: 0
+header_configuration__mcashier_mapping: 0
+header_configuration__promotion_page_title: 0
+header_configuration__links_title: 0
+header_configuration__logo_url: 0
+header_configuration__mobile_logo_url: 0
+header_configuration__registration_link_mobile: 0
+header_configuration__login_join_now_text: 0
+header_configuration__mcashier_link_target: 0
+header_configuration__currency_label_mapping: 0
+icore_games_integration__fish_hunter_currency: 1
+icore_games_integration__fish_hunter_language_mapping: 1
+icore_games_integration__kiron_virtual_sports_currency: 1
+icore_games_integration__kiron_virtual_sports_language_mapping: 1
+icore_games_integration__skywind_currency: 1
+icore_games_integration__skywind_language_mapping: 1
+icore_games_integration__voidbridge_currency: 1
+icore_games_integration__voidbridge_language_mapping: 1
+icore_games_integration__gold_deluxe_currency: 1
+icore_games_integration__gold_deluxe_language_mapping: 1
+icore_games_integration__video_racing_currency: 1
+icore_games_integration__video_racing_language_mapping: 1
+icore_games_integration__sa_gaming_currency: 1
+icore_games_integration__sa_gaming_language_mapping: 1
+icore_games_integration__unsupported_currencies_title: 1
+icore_games_integration__unsupported_currencies_message: 1
+icore_games_integration__unsupported_currencies_button: 1
+icore_games_integration__game_provider_mapping: 1
+icore_games_integration__fallback_error_title: 1
+icore_games_integration__fallback_error_message: 1
+icore_games_integration__fallback_error_button: 1
+icore_games_integration__safari_notif_message: 1
+icore_games_integration__allbet_currency: 1
+icore_games_integration__allbet_language_mapping: 1
+icore_games_integration__tgp_currency: 1
+icore_games_integration__tgp_language_mapping: 1
+icore_games_integration__evo_gaming_currency: 1
+icore_games_integration__evo_gaming_language_mapping: 1
+icore_games_integration__ebet_currency: 1
+icore_games_integration__ebet_language_mapping: 1
+icore_games_integration__gb_virtual_sports_currency: 1
+icore_games_integration__gb_virtual_sports_language_mapping: 1
+icore_games_integration__asia_gaming_currency: 1
+icore_games_integration__asia_gaming_language_mapping: 1
+icore_games_integration__asia_gaming_country: 1
+icore_games_integration__kiron_virtual_sports_country: 1
+icore_games_integration__gb_virtual_sports_country: 1
+icore_games_integration__skywind_country: 1
+icore_games_integration__voidbridge_country: 1
+icore_games_integration__gold_deluxe_country: 1
+icore_games_integration__video_racing_country: 1
+icore_games_integration__sa_gaming_country: 1
+icore_games_integration__allbet_country: 1
+icore_games_integration__tgp_country: 1
+icore_games_integration__evo_gaming_country: 1
+icore_games_integration__ebet_country: 1
+icore_games_integration__cq9_currency: 1
+icore_games_integration__cq9_language_mapping: 1
+icore_games_integration__cq9_country: 1
+icore_games_integration__solid_gaming_currency: 1
+icore_games_integration__solid_gaming_language_mapping: 1
+icore_games_integration__solid_gaming_country: 1
+icore_games_integration__gameworx_lottery_currency: 1
+icore_games_integration__gameworx_lottery_language_mapping: 1
+icore_games_integration__gameworx_lottery_country: 1
+icore_games_integration__gameworx_lottery_lobby_type: 1
+icore_games_integration__gameworx_lottery_operator_id: 1
+icore_games_integration__gameworx_lottery_plugin_id: 1
+icore_games_integration__gameworx_lottery_realitycheck_url: 1
+icore_games_integration__gameworx_lottery_deposit_url: 1
+icore_games_integration__gameworx_lottery_exit_url: 1
+icore_games_integration__gameworx_quicklotto_currency: 1
+icore_games_integration__gameworx_quicklotto_language_mapping: 1
+icore_games_integration__gameworx_quicklotto_country: 1
+icore_games_integration__gameworx_quicklotto_lobby_type: 1
+icore_games_integration__gameworx_quicklotto_operator_id: 1
+icore_games_integration__gameworx_quicklotto_plugin_id: 1
+icore_games_integration__gameworx_quicklotto_realitycheck_url: 1
+icore_games_integration__gameworx_quicklotto_deposit_url: 1
+icore_games_integration__gameworx_quicklotto_exit_url: 1
+icore_games_integration__betconstruct_currency: 1
+icore_games_integration__betconstruct_language_mapping: 1
+icore_games_integration__betconstruct_country: 1
+icore_games_integration__betconstruct_container_id: 1
+icore_games_integration__fun_gaming_currency: 1
+icore_games_integration__fun_gaming_language_mapping: 1
+icore_games_integration__fun_gaming_country: 1
+icore_games_integration__micro_gaming_currency: 1
+icore_games_integration__micro_gaming_language_mapping: 1
+icore_games_integration__micro_gaming_country: 1
+icore_games_integration__safari_notif: 1
+icore_games_integration__flow_gaming_currency: 1
+icore_games_integration__flow_gaming_language_mapping: 1
+icore_games_integration__flow_gaming_country: 1
+icore_games_integration__ky_gaming_currency: 1
+icore_games_integration__ky_gaming_language_mapping: 1
+icore_games_integration__ky_gaming_country: 1
+icore_games_integration__pgsoft_currency: 1
+icore_games_integration__pgsoft_language_mapping: 1
+icore_games_integration__pgsoft_country: 1
+icore_games_integration__ruby_play_currency: 1
+icore_games_integration__ruby_play_language_mapping: 1
+icore_games_integration__ruby_play_country: 1
+icore_games_integration__ezugi_gaming_currency: 1
+icore_games_integration__ezugi_gaming_language_mapping: 1
+icore_games_integration__ezugi_gaming_country: 1
+icore_games_integration__wac_currency: 1
+icore_games_integration__wac_language_mapping: 1
+icore_games_integration__wac_country: 1
+icore_games_integration__asia_gaming_custom_lobbyDomain: 1
+icore_games_integration__asia_gaming_custom_lobbyDomain_enabled: 1
+icore_games_integration__ruby_play_geoip_domain_override: 1
+icore_games_integration__lottoland_currency: 1
+icore_games_integration__lottoland_language_mapping: 1
+icore_games_integration__lottoland_country: 1
+icore_games_integration__lottoland_javascript_assets: 1
+icore_games_integration__onegame_currency: 0
+icore_games_integration__onegame_language_mapping: 0
+icore_games_integration__onegame_country: 0
+icore_playtech_provider__dafabetgames_currency: 1
+icore_playtech_provider__dafabetgames_language_mapping: 1
+icore_playtech_provider__dafabetgames_iapiconf_override: 1
+icore_playtech_provider__dafabetgames_country: 1
+login_configuration__username_placeholder: 0
+login_configuration__password_placeholder: 0
+login_configuration__login_bottom_label: 0
+login_configuration__error_message_blank_username: 0
+login_configuration__error_message_blank_password: 0
+login_configuration__error_message_blank_passname: 0
+login_configuration__error_message_invalid_passname: 0
+login_configuration__error_message_service_not_available: 0
+login_configuration__error_message_account_suspended: 0
+login_configuration__error_message_account_locked: 0
+login_configuration__session_maxtime: 0
+login_configuration__autologout_box_title: 0
+login_configuration__autologout_box_content: 0
+login_configuration__affirmative_button_text: 0
+login_configuration__negative_button_text: 0
+login_configuration__notification_title: 0
+login_configuration__notification_content: 0
+login_configuration__lightbox_blurb: 0
+login_configuration__notification_window_title: 0
+login_configuration__mobile_login_url: 0
+login_configuration__login_page_blurb: 0
+login_configuration__mobile_login_button_label: 0
+login_configuration__rememberme_label: 0
+login_configuration__mobile_cant_login_url: 0
+page_not_found__page_not_found_title: 0
+page_not_found__page_not_found_content: 0
+page_not_found__page_not_found_image: 0
+page_not_found__page_not_found_image_url: 0
+promotion_configuration__read_more: 0
+promotion_configuration__countdown: 0
+promotion_configuration__all_text: 0
+promotion_right_side__promotion_right_side_title: 1
+promotion_right_side__promotion_right_side_visibility: 1
+pushnx_configuration__enable: 0
+pushnx_configuration__producttype_id: 0
+pushnx_configuration__retry_count: 0
+pushnx_configuration__delay_count: 0
+pushnx_configuration__expiry_delay_count: 0
+pushnx_configuration__exclude_pages: 0
+pushnx_configuration__translated_texts: 0
+pushnx_configuration__expiry_error_message: 0
+pushnx_configuration__date_format: 0
+pushnx_configuration__date_offset: 0
+pushnx_configuration__login_selector: 0
+pushnx_configuration__debug_logging: 0
+pushnx_configuration__debug_display_all: 0
+pushnx_configuration__debug_display_expirydate: 0
+pushnx_configuration__text_: 0
+pushnx_configuration__text_notifications: 0
+pushnx_configuration__text_ok: 0
+pushnx_configuration__text_accept: 0
+pushnx_configuration__text_decline: 0
+pushnx_configuration__domain: 0
+pushnx_configuration__disableBonusAward: 0
+pushnx_configuration__text_notification: 0
+'pushnx_configuration__text_ok en': 0
+'pushnx_configuration__text_accept en': 0
+'pushnx_configuration__text_decline en': 0
+'pushnx_configuration__text_sanjeev en': 0
+pushnx_configuration__producttype_id_mapping: 0
+pushnx_configuration__dismiss_button_label: 0
+pushnx_configuration__dismiss_content: 0
+pushnx_configuration__dismiss_yes: 0
+pushnx_configuration__dismiss_no: 0
+pushnx_configuration__text_oken: 0
+pushnx_configuration__text_accepten: 0
+pushnx_configuration__text_declineen: 0
+pushnx_configuration_v2__enable: 0
+pushnx_configuration_v2__disableBonusAward: 0
+pushnx_configuration_v2__debug_display_all: 0
+pushnx_configuration_v2__domain: 0
+pushnx_configuration_v2__retry_count: 0
+pushnx_configuration_v2__delay_count: 0
+pushnx_configuration_v2__expiry_delay_count: 0
+pushnx_configuration_v2__product_list: 1
+pushnx_configuration_v2__title: 1
+pushnx_configuration_v2__empty: 0
+pushnx_configuration_v2__expired_message: 0
+pushnx_configuration_v2__copied: 0
+pushnx_configuration_v2__date_format: 0
+pushnx_configuration_v2__date_offset: 0
+pushnx_configuration_v2__cta_button_list: 0
+pushnx_configuration_v2__dismiss_button_label: 0
+pushnx_configuration_v2__dismiss_content: 0
+pushnx_configuration_v2__dismiss_yes: 0
+pushnx_configuration_v2__dismiss_no: 0
+pushnx_configuration_v2__domains: 0
+pushnx_configuration_v2__exclude_pages: 0
+pushnx_configuration_v2__debug_logging: 0
+pushnx_configuration_v2__debug_display_expirydate: 0
+pushnx_configuration_v2__product_label_: 0
+pushnx_configuration_v2__product_type_id_: 0
+pushnx_configuration_v2__product_icon_: 0
+pushnx_configuration_v2__product_exclude_: 0
+pushnx_configuration_v2__product_exclude_dismiss_: 0
+pushnx_configuration_v2__cta_label_: 0
+pushnx_configuration_v2__cta_actions_: 0
+pushnx_configuration_v2__product_label_live-dealer: 1
+pushnx_configuration_v2__product_type_id_live-dealer: 1
+pushnx_configuration_v2__product_icon_live-dealer: 1
+pushnx_configuration_v2__product_exclude_live-dealer: 1
+pushnx_configuration_v2__product_exclude_dismiss_live-dealer: 1
+pushnx_configuration_v2__product_label_taurus: 1
+pushnx_configuration_v2__product_type_id_taurus: 1
+pushnx_configuration_v2__product_icon_taurus: 1
+pushnx_configuration_v2__product_exclude_taurus: 1
+pushnx_configuration_v2__product_exclude_dismiss_taurus: 1
+pushnx_configuration_v2__product_label_alpine: 1
+pushnx_configuration_v2__product_type_id_alpine: 1
+pushnx_configuration_v2__product_icon_alpine: 1
+pushnx_configuration_v2__product_exclude_alpine: 1
+pushnx_configuration_v2__product_exclude_dismiss_alpine: 1
+pushnx_configuration_v2__cta_label_ok: 0
+pushnx_configuration_v2__cta_actions_ok: 0
+pushnx_configuration_v2__cta_label_accept: 0
+pushnx_configuration_v2__cta_actions_accept: 0
+pushnx_configuration_v2__cta_label_decline: 0
+pushnx_configuration_v2__cta_actions_decline: 0
+pushnx_configuration_v2__cta_label_proceed: 0
+pushnx_configuration_v2__cta_actions_proceed: 0
+pushnx_configuration_v2__cta_label_no: 0
+pushnx_configuration_v2__cta_actions_no: 0
+pushnx_configuration_v2__product_label_generic: 1
+pushnx_configuration_v2__product_type_id_generic: 1
+pushnx_configuration_v2__product_icon_generic: 1
+pushnx_configuration_v2__product_exclude_generic: 1
+pushnx_configuration_v2__product_exclude_dismiss_generic: 1
+pushnx_configuration_v2__product_label_payments: 1
+pushnx_configuration_v2__product_type_id_payments: 1
+pushnx_configuration_v2__product_icon_payments: 1
+pushnx_configuration_v2__product_exclude_payments: 1
+pushnx_configuration_v2__product_exclude_dismiss_payments: 0
+pushnx_configuration_v2__counter_enable: 0
+pushnx_configuration_v2__counter_message: 0
+pushnx_configuration_v2__promotions_tab_enable: 0
+pushnx_configuration_v2__promotions_tab_title: 0
+pushnx_configuration_v2__promotions_tab_empty_message: 0
+pushnx_configuration_v2__payments_tab_enable: 0
+pushnx_configuration_v2__payments_tab_title: 0
+pushnx_configuration_v2__payments_tab_empty_message: 0
+sitemap_configuration__enable_sitemap: 1
+sitemap_configuration__sitemap_title: 1
+sitemap_configuration__sitemap_content: 1
+sitemap_configuration__sitemap_home_label: 1
+sitemap_configuration__sitemap_home_link: 1
+sitemap_configuration__sitemap_promotions_label: 1
+sitemap_configuration__sitemap_promotions_link: 1
+sitemap_configuration__sitemap_mobile_label: 1
+sitemap_configuration__sitemap_mobile_link: 1
+sitemap_configuration__sitemap_basic_pages_label: 1
+territory_blocking__territory_blocking_mapping: 1
+toggle_configuration__domain_toggle: 0
+toggle_configuration__optimize_import: 0
+toggle_configuration__domains_batch: 0
+unsupported_currency__unsupported_currencies_title: 1
+unsupported_currency__unsupported_currencies_message: 1
+unsupported_currency__unsupported_currencies_button: 1
+unsupported_currency__game_provider_mapping: 1
+vip_configuration__vip_mapping_configuration: 0
+vip_configuration__vip_badge_tooltip: 0
+webcomposer_site_maintenance__product_list: 1
+webcomposer_site_maintenance__maintenance_title_live-dealer: 1
+webcomposer_site_maintenance__maintenance_content_live-dealer: 1
+webcomposer_site_maintenance__maintenance_publish_date_live-dealer: 1
+webcomposer_site_maintenance__maintenance_unpublish_date_live-dealer: 1
