--- a/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-games/config/sync/field.storage.node.field_game_provider.yml
@@ -47,6 +47,9 @@ settings:
     -
       value: onegame
       label: 'One Game'
+    -
+      value: jsystem
+      label: JSystem
   allowed_values_function: ''
 module: options
 locked: false
