[DFMARC-14] - [Dafabet Arcade] JSystems Integration

--- a/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-arcade/config/sync/field.storage.node.field_game_provider.yml
@@ -53,6 +53,9 @@ settings:
     -
       value: pgsoft
       label: PGSoft
+    -
+      value: jsystem
+      label: JSystem
   allowed_values_function: ''
 module: options
 locked: false
