--- a/web/sites/virtuals/config/sync/views.view.gameroom.yml
+++ b/web/sites/virtuals/config/sync/views.view.gameroom.yml
@@ -42,7 +42,7 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: none
+        type: tag
         options: {  }
       query:
         type: views_query
@@ -1113,7 +1113,8 @@ display:
     display_title: 'REST export'
     position: 1
     display_options:
-      display_extenders: {  }
+      display_extenders:
+        metatag_display_extender: {  }
       path: api/gameroom
       pager:
         type: none
