--- a/web/sites/keno/config/sync/views.view.gameroom.yml
+++ b/web/sites/keno/config/sync/views.view.gameroom.yml
@@ -42,7 +42,7 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: none
+        type: tag
         options: {  }
       query:
         type: views_query
