Remove file field Added category id

--- a/web/sites/games/config/sync/core.extension.yml
+++ b/web/sites/games/config/sync/core.extension.yml
@@ -102,6 +102,7 @@ module:
   webcomposer_floating_banners: 0
   webcomposer_games: 0
   webcomposer_games_statuses: 0
+  webcomposer_graphyte: 0
   webcomposer_language_access: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
