--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
@@ -8,13 +8,45 @@ dependencies:
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_enable_game
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_category
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_code
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_code_icore
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_filter
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_filter_games
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_provider
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_tag
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_thumbnail
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_title
     - image.style.thumbnail
   module:
+    - field_group
     - image
     - zipang_mobile_games
+third_party_settings:
+  field_group:
+    group_casino_for_casino_page_:
+      children:
+        - field_game_category
+        - field_game_filter
+      parent_name: ''
+      weight: 10
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'fields for casino page'
+        required_fields: true
+      label: 'Casino (for casino page)'
+    group_games_for_games_page_:
+      children:
+        - field_game_filter_games
+      parent_name: ''
+      weight: 11
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Games (for games page)'
 _core:
   default_config_hash: mz6SAokqodOXXIM2vE5rK82nh-6HB1qqKtUEhU2_8iM
 id: zipang_mobile_games_entity.zipang_mobile_games_entity.default
@@ -23,7 +55,7 @@ bundle: zipang_mobile_games_entity
 mode: default
 content:
   field_client_type:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -46,15 +78,41 @@ content:
     weight: 3
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: options_buttons
     region: content
   field_game_code:
-    weight: 6
+    weight: 4
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_game_code_icore:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_game_filter:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_game_filter_games:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_game_provider:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_game_tag:
     weight: 7
@@ -63,7 +121,7 @@ content:
     type: options_select
     region: content
   field_game_thumbnail:
-    weight: 4
+    weight: 3
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -71,7 +129,7 @@ content:
     type: image_image
     region: content
   field_game_title:
-    weight: 2
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -80,15 +138,12 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  translation:
-    weight: 9
-    region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
 hidden:
   name: true
+  translation: true
   user_id: true
