--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.zipang_mobile_games_entity.zipang_mobile_games_entity.default.yml
@@ -8,6 +8,10 @@ dependencies:
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_enable_game
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_category
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_code
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_code_icore
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_filter
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_filter_games
+    - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_provider
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_tag
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_thumbnail
     - field.field.zipang_mobile_games_entity.zipang_mobile_games_entity.field_game_title
@@ -65,6 +69,38 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_game_code_icore:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_game_filter:
+    weight: 11
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_game_filter_games:
+    weight: 12
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_game_provider:
+    weight: 13
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_game_tag:
     weight: 5
