--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_desktop_games_entity.field_game_filter_games.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_desktop_games_entity.field_game_filter_games.yml
@@ -1,14 +1,12 @@
-uuid: cdda2350-c4d5-48be-8cba-61245a563884
+uuid: 786a43ef-cde4-4aae-8f27-0d7614c85b14
 langcode: ja
 status: true
 dependencies:
   module:
     - taxonomy
     - zipang_desktop_games
-_core:
-  default_config_hash: CGSiFqj__tCn4GMk6g2La7foip24n-AmKgOpYsxhfhg
-id: zipang_desktop_games_entity.field_game_category
-field_name: field_game_category
+id: zipang_desktop_games_entity.field_game_filter_games
+field_name: field_game_filter_games
 entity_type: zipang_desktop_games_entity
 type: entity_reference
 settings:
