--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_desktop_games_entity.field_game_provider.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_desktop_games_entity.field_game_provider.yml
@@ -1,21 +1,19 @@
-uuid: cdda2350-c4d5-48be-8cba-61245a563884
+uuid: 33438684-f7f4-4da7-a9fd-7baea139eb06
 langcode: ja
 status: true
 dependencies:
   module:
     - taxonomy
     - zipang_desktop_games
-_core:
-  default_config_hash: CGSiFqj__tCn4GMk6g2La7foip24n-AmKgOpYsxhfhg
-id: zipang_desktop_games_entity.field_game_category
-field_name: field_game_category
+id: zipang_desktop_games_entity.field_game_provider
+field_name: field_game_provider
 entity_type: zipang_desktop_games_entity
 type: entity_reference
 settings:
   target_type: taxonomy_term
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
