--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_filter.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_filter.yml
@@ -1,14 +1,12 @@
-uuid: 7877ce95-6727-4841-8435-fcbd17768099
+uuid: c9aecba6-0bc9-446a-a9a1-14ad93fa5b0d
 langcode: ja
 status: true
 dependencies:
   module:
     - taxonomy
     - zipang_mobile_games
-_core:
-  default_config_hash: bGpfkNVGdL14uQIpKzeFJMYeeE28eCylK_DxxmV-408
-id: zipang_mobile_games_entity.field_game_category
-field_name: field_game_category
+id: zipang_mobile_games_entity.field_game_filter
+field_name: field_game_filter
 entity_type: zipang_mobile_games_entity
 type: entity_reference
 settings:
