--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_filter_games.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_filter_games.yml
@@ -1,14 +1,12 @@
-uuid: 7877ce95-6727-4841-8435-fcbd17768099
+uuid: 31166ec4-aa3f-4fba-84ef-b237d320f830
 langcode: ja
 status: true
 dependencies:
   module:
     - taxonomy
     - zipang_mobile_games
-_core:
-  default_config_hash: bGpfkNVGdL14uQIpKzeFJMYeeE28eCylK_DxxmV-408
-id: zipang_mobile_games_entity.field_game_category
-field_name: field_game_category
+id: zipang_mobile_games_entity.field_game_filter_games
+field_name: field_game_filter_games
 entity_type: zipang_mobile_games_entity
 type: entity_reference
 settings:
