--- a/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_provider.yml
+++ b/web/sites/zipang-casino/config/sync/field.storage.zipang_mobile_games_entity.field_game_provider.yml
@@ -1,21 +1,19 @@
-uuid: 7877ce95-6727-4841-8435-fcbd17768099
+uuid: 4b13609e-9912-4064-83ab-8559e4349a28
 langcode: ja
 status: true
 dependencies:
   module:
     - taxonomy
     - zipang_mobile_games
-_core:
-  default_config_hash: bGpfkNVGdL14uQIpKzeFJMYeeE28eCylK_DxxmV-408
-id: zipang_mobile_games_entity.field_game_category
-field_name: field_game_category
+id: zipang_mobile_games_entity.field_game_provider
+field_name: field_game_provider
 entity_type: zipang_mobile_games_entity
 type: entity_reference
 settings:
   target_type: taxonomy_term
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
