--- a/web/sites/mobile-arcade/config/sync/core.extension.yml
+++ b/web/sites/mobile-arcade/config/sync/core.extension.yml
@@ -82,6 +82,7 @@ module:
   webcomposer_editor: 0
   webcomposer_floating_banners: 0
   webcomposer_games: 0
+  webcomposer_graphyte: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
   webcomposer_promotions: 0
