--- a/web/sites/nextbet/config/sync/field.field.node.game.field_game_filters.yml
+++ b/web/sites/nextbet/config/sync/field.field.node.game.field_game_filters.yml
@@ -12,7 +12,7 @@ bundle: game
 label: Filters
 description: 'Select filters for this game.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
