game category translatable update

--- a/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.desktop_game_category.field_category_image_banner.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.desktop_game_category.field_category_image_banner.yml
@@ -16,7 +16,7 @@ bundle: desktop_game_category
 label: 'Category Image Banner'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
